# ubq

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: python-publish.yml
debian/: changelog  control  rules  watch
scripts/: get_bug_packages.py  get_github_issue.py  get_github_pull_requests.py  get_launchpad_bug.py  get_launchpad_merge_requests.py  get_snap_version.py  get_ubuntu_package_info.py  get_ubuntu_package_version.py  search_launchpad_bugs.py  submit_lp_bug.py
src/ubq/: __init__.py  query.py
src/ubq/models/: README.md  __init__.py  bug.py  common.py  merge_request.py  package.py  version.py
src/ubq/providers/: README.md  __init__.py  bug.py  merge_request.py  package.py  provider.py  registry.py  session.py  version.py
src/ubq/providers/github/: __init__.py  bug.py  merge_request.py  provider.py
src/ubq/providers/launchpad/: __init__.py  bug.py  merge_request.py  package.py  provider.py  version.py
src/ubq/providers/snapcraft/: __init__.py  package.py  provider.py  version.py
src/ubq/services/: README.md  __init__.py  query.py  registry.py
tests/: test_query_service.py
