[project]
name = "ubq"
version = "0.1.0"
description = "Ubuntu Query"

authors = [
	{ name = "Lena Voytek", email = "lena@voytek.dev" },
]

readme = "README.md"

[dependency-groups]
format = [
    "black>=26.3.1",
    "isort>=8.0.1",
]
lint = [
    "codespell>=2.4.2",
    "pylint>=4.0.5",
    "pyproject-flake8>=7.0.0",
]

[tool.isort]
profile = "black"
