[project]
name = "ubq"
version = "0.4.0"
description = "Ubuntu Query"

authors = [
	{ name = "Lena Voytek", email = "lena@voytek.dev" },
]

readme = "README.md"

requires-python = ">=3.13"

dependencies = [
    "keyring>=25.7.0",
    "launchpadlib>=2.1.0",
    "lazr-restfulclient>=0.14.6",
]

[dependency-groups]
format = [
    "ruff>=0.15.12",
]
lint = [
    "codespell>=2.4.2",
    "ty>=0.0.34",
]
test = [
    "pytest>=9.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "PL", "W"]

ignore = [
    "PLR2004", # Magic values in scripts
    "PLR0912", # Too many branches in submit_lp_bug
    "PLC0415", # ubq/providers/session.py imports in class
]
